@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_monitor.php,v 1.23 2003-02-15 10:25:16 jfitzell Exp $
+	# $Id: bug_monitor.php,v 1.24 2003-02-20 02:35:27 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -31,5 +31,5 @@
 		bug_monitor( $f_bug_id, auth_get_current_user_id() );
 	}
 
-	print_header_redirect_view( $f_bug_id );
+	print_success_and_redirect( $f_bug_id );
 ?>
